# LibraryManager

./: package-lock.json  package.json  pyproject.toml
backend/: run.py
backend/app/: main.py
backend/app/api/: api.py  crud.py
backend/app/api/endpoints/: books.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: book.py
backend/app/schemas/: book.py
client/: index.html
client/src/components/: BookCard.tsx  BookForm.tsx  DeleteConfirmation.tsx  Sidebar.tsx
client/src/pages/: home.tsx
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: bookApi.ts
frontend/src/assets/: index.css  tailwind.css
frontend/src/components/: BookForm.vue  DeleteConfirmation.vue
frontend/src/router/: index.ts
frontend/src/store/: bookStore.ts
frontend/src/styles/: main.css
frontend/src/types/: book.ts
frontend/src/views/: BooksView.vue  HomeView.vue  NotFoundView.vue
server/: routes.ts  storage.ts
shared/: schema.ts
